# python-backend-benchmarks

./: .env.template  .gitignore  EXAMPLE_RESULTS.md  README.md  docker-compose.yml  run_benchmarks.py
_database_init/: Dockerfile  container-entrypoint-db_init.sh  requirements_database_setup.txt
_database_init/db_init/bm_dj/: views.py
_database_init/db_init/config/: settings.py  urls.py  wsgi.py
django/: Dockerfile  container-entrypoint-django.sh  container-entrypoint.sh  docker-compose.yml  requirements.txt  requirements_dj.txt
django/benchmark_dj/bm_dj/: apps.py  views.py
django/benchmark_dj/config/: settings.py  urls.py
fastapi-django-orm/: Dockerfile  fastapi-django-orm.sh  fastapi_django_app.py  requirements_fastapi-django-orm.txt
fastapi-sqlalchemy-async/: Dockerfile  container-entrypoint-fastapi-sqlalchemy-async.sh  fastapi_app.py  requirements_fastapi-sqlalchemy-async.txt
fastapi-sqlalchemy-async-threadpool/: Dockerfile  container-entrypoint-fastapi-sqlalchemy-async-threadpool.sh  fastapi_app.py  pyproject.toml  requirements_fastapi-sqlalchemy-async-threadpool.txt
flask/: Dockerfile  container-entrypoint-flask.sh  flask_app.py  requirements_flask.txt
tornado/: Dockerfile  README.md  container-entrypoint-tornado.sh  requirements_tornado.txt  tornado_app.py
