[tool.poetry]
name = "fastapi-sqlalchemy-async-threadpool"
version = "0.1.0"
description = ""
authors = ["Vlad Ardelean <vlad.george.ardelean@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
SQLAlchemy = "1.4.15"
uvicorn = "0.13.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
